# igdl

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
scripts/: install.ps1  install.sh
src/: browser.rs  cli.rs  download.rs  error.rs  gallerydl.rs  lib.rs  main.rs  media.rs  paths.rs  progress.rs  url.rs  ytdlp.rs
tests/: browser.rs  cli.rs  download.rs  media.rs  paths.rs  progress.rs  ytdlp.rs  ytdlp_progress.rs
