[package]
name = "igdl"
version = "0.3.1"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
dirs = "6"
libc = "0.2"
thiserror = "2"
which = "8"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "rustls"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
