[package]
name = "igdl"
version = "0.3.1"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
dirs = "6.0.0"
libc = "0.2.183"
thiserror = "2.0.18"
which = "8.0.2"
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "rustls"] }
serde_json = "1.0.149"

[dev-dependencies]
tempfile = "3.27.0"
